# twinspace

./: .dockerignore  .env.template  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  REFACTORING_NOTES.md  STATUS.md  pyproject.toml  requirements.txt
app/: __init__.py  gemini_live.py  main.py  tools.py
app/appliance_agent/: __init__.py  agent.py
app/appliance_agent/tools/: __init__.py  inventory.py
app/static/: index.html
app/static/css/: style.css
app/static/js/: app.js  audio-player.js  audio-recorder.js  pcm-recorder-processor.js  video-handler.js
app/tools/: inventory.py  video_monitor.py
docs/architecture/: generate_diagram.py
docs/plans/: 2026-02-19-appliance-inventory-live-video.md
tests/: conftest.py  test_appliance_agent.py  test_integration.py  test_inventory_tool.py  test_video_monitor.py  test_websocket.py
