[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "appliance-inventory"
version = "0.1.0"
description = "Real-time appliance inventory using Gemini Live API"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=1.20.0",
    "fastapi>=0.115.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["C901", "PLR0915"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
